# Car-catalog

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
car_app/: models.py  tests.py  views.py
car_app/migrations/: 0001_initial.py
car_app/scripts/: update_catalog.py
car_catalog/: settings.py  urls.py
templates/: index.html
